名字修改，友盟id修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">阳光兼职</string>
+    <string name="app_name">暖阳兼职</string>
 
     <!--首页菜单-->
     <string name="menu_home">首页</string>
