ui修改完成大部分

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">点滴兼职</string>
+    <string name="app_name">快乐兼职</string>
 
     <!--首页菜单-->
     <string name="menu_home">首页</string>
-    <string name="menu_recommend">松鼠优选</string>
-    <string name="menu_hot">全部</string>
+    <string name="menu_recommend">官方推荐</string>
+    <string name="menu_hot">热门</string>
     <string name="menu_mine">我的</string>
 
 </resources>
