--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">快乐找工作</string>
+    <string name="app_name">快乐兼职</string>
 
     <!--首页菜单-->
     <string name="menu_home">首页</string>
